Fixing scrollbar.

--- a/css/main.css
+++ b/css/main.css
@@ -4,6 +4,7 @@ body {
 	padding:0pt;
 	margin: 0 auto;
 	width: 800pt;
+	overflow-y: scroll;
 }
 
 /* Navbar */
